<resources>
    <string name="app_name">INSOPTAndroidPractice</string>
    <string name="login_title">Welcome to SOPT</string>
    <string name="introduce">안녕하세요. 김준우 입니다.</string>
    <string name="id">ID</string>
    <string name="pw">비밀번호</string>
    <string name="mbti">MBTI</string>
    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="et_hint_id">ID를 입력하세요</string>
    <string name="et_hint_pw">비밀번호를 입력하세요</string>
    <string name="et_hint_mbti">MBTI를 입력하세요</string>
    <string name="et_hint_name">이름을 입력하세요</string>
    <string name="tv_warn_id">아이디 형식이 올바르지 않습니다. \n아이디는 영어,숫자 포함 6~10이내 입니다.</string>
    <string name="tv_warn_pw">비밀번호 형식이 올바르지 않습니다. \n비밀번호는 영어,숫자,특수문자 포함 6~12이내 입니다.</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGNUP</string>
    <string name="btn_sign_up">회원가입 완료</string>
    <string name="check">check</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>
    <string name="viewmodel_id">뷰모델로부터 넘어온 ID : %s</string>
    <string name="viewmodel_mbti">뷰모델로부터 넘어온 MBTI : %s</string>
    <string name="home_fail">서버통신에 실패했어요..</string>
    <string name="home_empty">리스트 데이터가 없어요!</string>
    <string name="fail_emoji">😵‍</string>
    <string name="btn_fail">재시도</string>
    <string name="upload">업로드</string>
    <string name="upload_success">업로드 성공</string>
    <string name="upload_fail">업로드 실패</string>
    <string name="post">전송</string>
    <string name="home_fragment">HomeFragment</string>
    <string name="search_fragment">SearchFragment</string>
    <string name="gallery_fragment">GalleryFragment</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>