<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="repodata"
            type="org.sopt.sample.presentation.home.model.GitData" />

        <variable
            name="selected"
            type="boolean" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/app_margin_12"
        app:layout_touch_gitItem="@{selected}">

        <ImageView
            android:id="@+id/imv_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/app_margin_12"
            android:contentDescription="@string/introduce"
            android:src="@drawable/ic_github"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:profile_load="@{repodata.img}" />


        <TextView
            android:id="@+id/tv_reponame"
            style="@style/Bold_TextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{repodata.name}"
            android:textSize="@dimen/text_font_20"
            app:layout_constraintEnd_toStartOf="@+id/guideline_text"
            app:layout_constraintStart_toEndOf="@+id/imv_profile"
            app:layout_constraintTop_toTopOf="parent"
            app:textView_touch_gitItem="@{selected}"
            tools:text="@string/search" />

        <TextView
            android:id="@+id/tv_owner"

            style="@style/Bold_TextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{repodata.des}"
            android:textSize="@dimen/text_font_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/guideline_text"
            app:layout_constraintStart_toEndOf="@+id/imv_profile"
            app:textView_touch_gitItem="@{selected}"
            tools:text="@string/home" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="64dp" />

        <ImageView
            android:id="@+id/imv_check"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="@dimen/app_margin_24"
            android:contentDescription="@string/check"
            android:src="@drawable/ic_check"
            android:visibility="@{selected ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>